HVAC Backup 2/objects/Assessment_Response__c(1).object
<CustomObject>
    <fields>
        <fullName>Assessment_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment Question</label>
        <referenceTo>Assessment_Questions__c</referenceTo>
        <relationshipLabel>Assessment Responses</relationshipLabel>
        <relationshipName>Assessment_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Assesment_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Correct_Answer__c</fullName>
        <formula>Assessment_Question__r.Correct_Answer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Correct Answer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Correct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <formula>Assessment_Question__r.Question_Text__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Right_Answer__c</fullName>
        <formula>IF(
    Selected_Answer__c = Assessment_Question__r.Correct_Answer__c, 
    TRUE, 
    FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Right Answer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selected_Answer__c</fullName>
        <label>Selected Answer</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>Assessment Response</label>
    <nameField>
        <displayFormat>ASR-{0000}</displayFormat>
        <label>Assessment Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>